--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height:100vh;
+  max-height: 100vh;
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  /* background-image: linear-gradient(to bottom right,#FE4880, #FFCE00); */
+  background: hsla(203, 97%, 61%, 1);
+
+background: radial-gradient(circle, hsla(203, 97%, 61%, 1) 0%, hsla(227, 100%, 21%, 1) 88%);
+
+background: -moz-radial-gradient(circle, hsla(203, 97%, 61%, 1) 0%, hsla(227, 100%, 21%, 1) 88%);
+
+background: -webkit-radial-gradient(circle, hsla(203, 97%, 61%, 1) 0%, hsla(227, 100%, 21%, 1) 88%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#3AB2FC", endColorstr="#001769", GradientType=1 );
 }
 
-.App-link {
-  color: #61dafb;
+body{
+  background-color: #f3f6f9;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
