--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,105 +1,101 @@
-*{
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
-    
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Ubuntu", sans-serif;
 }
-.Login{
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    
+.Login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-input{
-    appearance: none;
-    background: none;
-    border:none;
-    outline:none;
+input {
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
 }
-form{
-  display:block;
-  position:absolute;
-  
+form {
+  display: block;
+  position: absolute;
 }
 
-
-.form-inner{
-    border-radius: 8px;
-    position: relative;
-    display:block;
-    background: rgba( 255, 255, 255, 0.25 );
-box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-backdrop-filter: blur( 4px );
--webkit-backdrop-filter: blur( 4px );
-border-radius: 10px;
-border: 1px solid rgba( 255, 255, 255, 0.18 );
-    margin:10px;
-    padding:30px;
-    z-index:2;
+.form-inner {
+  border-radius: 8px;
+  position: relative;
+  display: block;
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  margin: 10px;
+  padding: 30px;
+  z-index: 2;
 }
- .form-inner h2{
-    color:#fff;
-    font-size: 28px;
-    font-weight:800;
-    margin-bottom: 30px;
+.form-inner h2 {
+  color: #fff;
+  font-size: 28px;
+  font-weight: 800;
+  margin-bottom: 30px;
 }
-.form-group{
-display:block;
-width:300px;
-/* margin:15px; */
-margin-top: 15px;
-margin-bottom: 15px;
+.form-group {
+  display: block;
+  width: 300px;
+  /* margin:15px; */
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
-.form-group label{
-    display: block;
-    color:#ffffff;
-    font-size:18px;
-    font-weight: 625;
-    margin-bottom: 5px;
-    transition:.4s; 
+.form-group label {
+  display: block;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 625;
+  margin-bottom: 5px;
+  transition: 0.4s;
 }
-.form-group:focus-within label{ 
-    color: #013059;
-} 
-.form-group input{
-    display:block;
-    width:100%;
-    padding:10px 15px;
-    background-color: #F8F8F8;
-    border-radius: 8px;
-    transition: .4;
+.form-group:focus-within label {
+  color: #013059;
 }
-input:focus{
-    box-shadow: 0px 0px 3px rgba(0,0,0,0.4);
+.form-group input {
+  display: block;
+  width: 100%;
+  padding: 10px 15px;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  transition: 0.4;
 }
-.button{
-    display:inline-block;
-    padding: 10px 15px;
-    border-radius: 8px;
-    background-color: #0258a3;
-    /* background-size: 200%;
+input:focus {
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.4);
+}
+.button {
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 8px;
+  background-color: #0258a3;
+  /* background-size: 200%;
     background-position: 0%;
     transition:0.4s; */
-    color:white;
-    font-weight: 700;
-    cursor:pointer;
-    border:none;
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+  border: none;
 }
 /* input[type="submit"]:hover {
     /* background-postion: 100% 0%; */
-    /* background-size: 100%;
+/* background-size: 100%;
 } */
 
-.button:hover{
-    background-color: #013059;
+.button:hover {
+  background-color: #013059;
 }
-@media screen and (max-width:480px){
-.form-inner{
-    width:300px;
-    height:370px;
-}
-.form-group{
-    width:237px
-}
+@media screen and (max-width: 480px) {
+  .form-inner {
+    width: 300px;
+    height: 370px;
+  }
+  .form-group {
+    width: 237px;
+  }
 }
